Addressed some Java compile and documentation warnings